fix mobile termine/appointment spacing

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -17,6 +17,7 @@
   --any-a-display: inline;
   --appointments-background-color: transparent;
   --appointments-content-width: 100%;
+  --appointments-content-spacing: var(--content-spacing-mobile);
   --background-color: #272727;
   --badge-call-for-ideas-h4-font-family: var(--font-family-quinary);
   --badge-call-for-ideas-h4-font-size-mobile: var(--h4-font-size-mobile);
